SWIM-20: Updates to model system run. Includes modifications to nearly all model components.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7328 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/model/scenario/inputs/globalTemplate.properties
+++ b/model/scenario/inputs/globalTemplate.properties
@@ -13,18 +13,18 @@ scenario.outputs                                      = @ROOT.DIR@/@SCENARIO.NAM
 scenario.root                                         = @ROOT.DIR@/@SCENARIO.NAME@
 visum.version                                         = 14
 
-java.executable      = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
-python.executable    = @ROOT.DIR@/model/lib/Python27/python.exe
+java.executable      = @ROOT.DIR@/@SCENARIO.NAME@/model/lib/java7/jre/bin/java.exe
+python.executable    = @ROOT.DIR@/@SCENARIO.NAME@/model/lib/Python27/python.exe
 # ensure the VISUM Python install can import numpy and VisumPy
-python.visum.executable    = C:/python26/python.exe
-r.executable         = @ROOT.DIR@/model/lib/R-2.15.0/bin/x64/R.exe
-seven.zip.executable = @ROOT.DIR@/model/lib/7za.exe
+python.visum.executable    = C:/Program Files/Python27/python.exe
+r.executable         = @ROOT.DIR@/@SCENARIO.NAME@/model/lib/R-3.1.2/bin/x64/R.exe
+seven.zip.executable = @ROOT.DIR@/@SCENARIO.NAME@/model/lib/7za.exe
 
 model.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/tlumip.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/xmlrpc-2.0.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/commons-codec-1.3.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 cpu.factor = 0.8
 use.localhost = True
 
-daf.memory = 35000m
+daf.memory = 15000m
 daf.start.node.sleep.time = 15000
 daf.start.cluster.sleep.time = 15000
 daf.done.file.check.sleep.time = 100
@@ -34,6 +34,12 @@ daf.message.port = 8067
 daf.admin.port = 9067
 
 
+#AgForestFloorspace 
+agforest.floorspace.file = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/AgForestFloorspace.csv
+world.market.fieldnames.file = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/worldMarketFields.csv
+
+#ALLZONESFILENAME
+all.zones.file = @ROOT.DIR@/@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/AllZones.csv
 #in these commands, |...| is used to indicate property references
 viz.build.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/viz/build_Viz_DB.R
 viz.combine.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/viz/all_Viz_DB.R
@@ -209,6 +215,10 @@ ald.UsingAA = true
 ################################## SPG Properties ##################################
 # SPG properties - Year 1
 
+
+##SPG1 USES THIS
+randomSeed = 1970
+
 ## SPG1 related properties
 # conversion factor to convert 1990 incomes to 1990$
 spg.sensitivity.testing = false
@@ -261,16 +271,16 @@ spg.use.acs = true
 acs.sw.occupation.correspondence.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_occupation_2005_2009.csv
 #acs.sw.industry.correspondence.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_industry_2005_2009.csv
 
-acs.household.file.CA = @ROOT.DIR@/model/census/ss09hca.csv
-acs.household.file.ID = @ROOT.DIR@/model/census/ss09hid.csv
-acs.household.file.NV = @ROOT.DIR@/model/census/ss09hnv.csv
-acs.household.file.OR = @ROOT.DIR@/model/census/ss09hor.csv
-acs.household.file.WA = @ROOT.DIR@/model/census/ss09hwa.csv
-acs.person.file.CA = @ROOT.DIR@/model/census/ss09pca.csv
-acs.person.file.ID = @ROOT.DIR@/model/census/ss09pid.csv
-acs.person.file.NV = @ROOT.DIR@/model/census/ss09pnv.csv
-acs.person.file.OR = @ROOT.DIR@/model/census/ss09por.csv
-acs.person.file.WA = @ROOT.DIR@/model/census/ss09pwa.csv
+acs.household.file.CA = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09hca.csv
+acs.household.file.ID = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09hid.csv
+acs.household.file.NV = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09hnv.csv
+acs.household.file.OR = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09hor.csv
+acs.household.file.WA = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09hwa.csv
+acs.person.file.CA = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09pca.csv
+acs.person.file.ID = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09pid.csv
+acs.person.file.NV = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09pnv.csv
+acs.person.file.OR = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09por.csv
+acs.person.file.WA = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09pwa.csv
 
 acs.hhIdField.name = SERIALNO
 acs.pumaField.name = PUMA
@@ -297,10 +307,10 @@ acs.person.variables = SEX AGEP SCH ESR INDP OCCP
 using.aa = true
 aa.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/aa.properties
 
-aa.command.java = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
+aa.command.java = @ROOT.DIR@/@SCENARIO.NAME@/model/lib/java7/jre/bin/java.exe
 aa.command.max.heap.size = 3000m
 aa.command.log4j.config.file = info_log4j_aa.xml
-aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.7_r3650.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r3660.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
+aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.7_r3140.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r3409.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 aa.command.class = com.hbaspecto.oregon.pecas.aa.OregonAAControl
 
 # Path for input files
@@ -554,37 +564,24 @@ sdt.trace.households = 345
 sdt.trace.persons = 256_1
 
 ################################## CT Properties ##################################
-ct.sensitivity.testing = false
+ct.rcode = CTx4.R
+ct.codePath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/ct/
+ct.property = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/ct.properties
+ct.filePath = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/
+ct.properties.folder = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters
 
-## interzonal interchange threshold
-SMALLEST_ALLOWABLE_TONNAGE = 0.025
-
-#previous year files
-beta.pk.dist.skim = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TA.LAST.RUN@/betapktrk1dist
-alpha.pk.dist.skim = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TA.LAST.RUN@/pktrk1dist
-alpha.op.time.skim = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TA.LAST.RUN@/pktrk1time
-ts.skim.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TA.LAST.RUN@/
-
-# base year data
-ct.base.data = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
-
-#previous year data
-ct.previous.data = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CT.LAST.RUN@/
-
-#current year data
-pi.commodity.flows = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@/
-pi.commodity.properties = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/CommoditiesI.csv
-
-## output location
-ct.current.data = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
-
-#commodity $ flow files
-#ct.dollars.by.mode.flow.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/DollarsByModeFlow
-
-
-## developer use only
-debug = false
-randomSeed = 1970
+ct.random.seed                 = 630730
+ct.extended.trace              = FALSE
+ct.target.week                 = 23
+ct.target.day                  = 4
+ct.weeks.per.year              = 50
+ct.oregon.regions              = 411,419
+ct.external.scaling.factor     = 2.41
+ct.resampling.threshold        = 2.0
+ct.maximum.resampling.attempts = 25
+ct.port.of.portland            = 925
+ct.port.of.coos.bay            = 2129
+ct.pdx.airport                 = 904
 
 ################################## ET Properties ##################################
 
@@ -609,19 +606,30 @@ ta.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTER
 tr.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/tr.properties
 
 ta.demand.output.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@
-ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/swimNetworkAttributes.ver
+ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes.ver
+ta.previous.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@SI.LAST.RUN@/swimNetworkAttributes.ver
+ta.t0.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/swimNetworkAttributes.ver
 
 ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes.ver
 ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM_PeakAssignmentPaths.ver
 ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM_OffpeakAssignmentPaths.ver
+ta.pm.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM_PMAssignmentPaths.ver
+ta.ni.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM_NIAssignmentPaths.ver
 
 ta.zone.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/zoneFieldNames.csv
+ta.link.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/linkFieldNames.csv
 ta.zmx.input.files = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/inpZMXFileNames.csv
 ta.assignment.parameters.directory = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum
 ta.path.assignment.parameters = pathbasedAssignmentSettings.par
+ta.path.allperiod.assignment.parameters = pathbasedAssignmentSettings_FULL.par
 ta.luce.assignment.parameters = LUCEAssignmentSettings.par
+ta.luce.allperiod.assignment.parameters = LUCEAssignmentSettings_FULL.par
 # PATHBASED or LUCE
 ta.assignment.type = PATHBASED
+# PKOP (PEAK+OFFPEAK) or ALL (PEAK+OFFPEAK+PM+NIGHT)
+ta.assignment.periods = ALL
+
+ta.volume.factor.percentile = 0.5
 
 tr.transit.assignment.intracity.rail.parameters = intracityrailAssignmentSettings.par
 tr.transit.assignment.intercity.rail.parameters = intercityrailAssignmentSettings.par
