Graham: "The fix is that there should be a property called aa.createCompressedFlowVisuals added to globalTemplate.properties, and it should be set to false. (For some reason, John made that property default to true if not specified, which requires a property change in every model that upgrades to the newer code). "
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7373 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/model/scenario/inputs/globalTemplate.properties
+++ b/model/scenario/inputs/globalTemplate.properties
@@ -373,7 +373,7 @@ aa.minimumStepSize = .025
 aa.maximumStepSize = 2.5
 aa.localPriceStepSizeAdjustment = 1
 aa.automaticTechnologySizeTerms=true
-
+aa.createCompressedFlowVisuals=false
 aa.maxTotalClearance=0.00005
 aa.maxSpecificClearance=0.02
 aa.ConFac=.01
