Fixed a bug that prevented Oregon-specific AA outputs from being written.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7374 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/model/scenario/inputs/globalTemplate.properties
+++ b/model/scenario/inputs/globalTemplate.properties
@@ -13,12 +13,12 @@ scenario.outputs                                      = @ROOT.DIR@/@SCENARIO.NAM
 scenario.root                                         = @ROOT.DIR@/@SCENARIO.NAME@
 visum.version                                         = 14
 
-java.executable      = @ROOT.DIR@/@SCENARIO.NAME@/model/lib/java7/jre/bin/java.exe
-python.executable    = @ROOT.DIR@/@SCENARIO.NAME@/model/lib/Python27/python.exe
-# ensure the VISUM Python install can import numpy and VisumPy
-python.visum.executable    = C:/Program Files/Python27/python.exe
-r.executable         = @ROOT.DIR@/@SCENARIO.NAME@/model/lib/R-3.1.2/bin/x64/R.exe
-seven.zip.executable = @ROOT.DIR@/@SCENARIO.NAME@/model/lib/7za.exe
+java.executable      = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
+python.executable    = @ROOT.DIR@/model/lib/Python27/python.exe
+# python.visum.executable    = @ROOT.DIR@/model/lib/Python27/python.exe
+python.visum.executable = @ROOT.DIR@/model/lib/Python27/python.exe
+r.executable         = @ROOT.DIR@/model/lib/R-3.1.2/bin/x64/R.exe
+seven.zip.executable = @ROOT.DIR@/model/lib/7za.exe
 
 model.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/tlumip.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/xmlrpc-2.0.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/commons-codec-1.3.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 cpu.factor = 0.8
@@ -271,16 +271,16 @@ spg.use.acs = true
 acs.sw.occupation.correspondence.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_occupation_2005_2009.csv
 #acs.sw.industry.correspondence.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_industry_2005_2009.csv
 
-acs.household.file.CA = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09hca.csv
-acs.household.file.ID = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09hid.csv
-acs.household.file.NV = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09hnv.csv
-acs.household.file.OR = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09hor.csv
-acs.household.file.WA = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09hwa.csv
-acs.person.file.CA = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09pca.csv
-acs.person.file.ID = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09pid.csv
-acs.person.file.NV = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09pnv.csv
-acs.person.file.OR = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09por.csv
-acs.person.file.WA = @ROOT.DIR@/@SCENARIO.NAME@/model/census/ss09pwa.csv
+acs.household.file.CA = @ROOT.DIR@/model/census/ss09hca.csv
+acs.household.file.ID = @ROOT.DIR@/model/census/ss09hid.csv
+acs.household.file.NV = @ROOT.DIR@/model/census/ss09hnv.csv
+acs.household.file.OR = @ROOT.DIR@/model/census/ss09hor.csv
+acs.household.file.WA = @ROOT.DIR@/model/census/ss09hwa.csv
+acs.person.file.CA = @ROOT.DIR@/model/census/ss09pca.csv
+acs.person.file.ID = @ROOT.DIR@/model/census/ss09pid.csv
+acs.person.file.NV = @ROOT.DIR@/model/census/ss09pnv.csv
+acs.person.file.OR = @ROOT.DIR@/model/census/ss09por.csv
+acs.person.file.WA = @ROOT.DIR@/model/census/ss09pwa.csv
 
 acs.hhIdField.name = SERIALNO
 acs.pumaField.name = PUMA
@@ -307,10 +307,10 @@ acs.person.variables = SEX AGEP SCH ESR INDP OCCP
 using.aa = true
 aa.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/aa.properties
 
-aa.command.java = @ROOT.DIR@/@SCENARIO.NAME@/model/lib/java7/jre/bin/java.exe
+aa.command.java = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
 aa.command.max.heap.size = 3000m
 aa.command.log4j.config.file = info_log4j_aa.xml
-aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.7_r3650.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r3660.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
+aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.7_r3650.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r3711.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 aa.command.class = com.hbaspecto.oregon.pecas.aa.OregonAAControl
 
 # Path for input files
@@ -359,6 +359,7 @@ aa.writeExchangeDerivatives=true
 aa.directExcelInputs=false
 aa.externalZonesInHistogram=false
 aa.writeFlowMatrices=true
+aa.createCompressedFlowVisuals=false
 aa.writeAsciiZonalMakeUse=true
 aa.writeBinaryZonalMakeUse=false
 aa.stringsInZonalMakeUse=false
