SL AllZones.csv filepath updated
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7379 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/model/scenario/inputs/globalTemplate.properties
+++ b/model/scenario/inputs/globalTemplate.properties
@@ -652,7 +652,7 @@ demand.output.filename = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT
 sl.mode = @SL.MODE@
 sl.current.directory = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 
-sl.taz.data.filename = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/AllZones.csv
+sl.taz.data.filename = @ROOT.DIR@/@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/AllZones.csv
 
 sl.select.link.data.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/build_select_link_matrices.py
 sl.select.link.node.sequence.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/get_link_sequence.py
