Resolves SWIM-40, automating seed skim creation. This involves new VISUM procedure files to create the transit and auto skims and a set of air inputs, based on teh old EMME 221 file that describes the air network.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7431 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -12,6 +12,8 @@ scenario.inputs                                       = @ROOT.DIR@/@SCENARIO.NAM
 scenario.outputs                                      = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@
 scenario.root                                         = @ROOT.DIR@/@SCENARIO.NAME@
 visum.version                                         = 14
+new.zone.system										  = True
+
 
 java.executable      = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
 python.executable    = @ROOT.DIR@/model/lib/Python27/python.exe
@@ -24,7 +26,7 @@ model.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/tlumip.jar;@ROOT.DIR@/@S
 cpu.factor = 0.8
 use.localhost = True
 
-daf.memory = 35000m
+daf.memory = 15000m
 daf.start.node.sleep.time = 15000
 daf.start.cluster.sleep.time = 15000
 daf.done.file.check.sleep.time = 100
@@ -68,8 +70,8 @@ model.save.run.history.program = @ROOT.DIR@/@SCENARIO.NAME@/model/code/model_run
 
 alpha2beta.file                                       = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/alpha2beta.csv
 alpha2beta.formats                                    = NUMBER, NUMBER, STRING, STRING, NUMBER, NUMBER, NUMBER, NUMBER, NUMBER, NUMBER, NUMBER, STRING, STRING, STRING, NUMBER, STRING, NUMBER, NUMBER
-alpha.name                                            =Azone
-beta.name                                             =Bzone
+alpha.name                                            = Azone
+beta.name                                             = Bzone
 pumaField.name                                        = PUMA2000
 stateLabelField.name                                  = State
 stateFipsField.name                                   = STATEFIPS
@@ -77,6 +79,7 @@ world.to.external.distances                           = @ROOT.DIR@/@SCENARIO.NAM
 local.market.world.zone                               = 6006
 port.of.portland.zone                                 = 5012
 external.stations                                     = 5001 5002 5003 5004 5005 5006 5007 5008 5009 5010 5011 5012
+air.inputs											  = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/air_inputs.csv
 
 # begin and end hours in am peak period
 am.peak.start = 700
@@ -100,7 +103,7 @@ nt.peak.end = 659
 
 matrix.extension                                      = .zmx
 
-//Name of Fields in SynPopP and SynPopH files used by SPG and PT.
+#Name of Fields in SynPopP and SynPopH files used by SPG and PT.
 pums.hhIdField.name                                   = SERIALNO
 pums.pumaField.name                                   = PUMA
 pums.stateField.name                                  = STATE
@@ -609,10 +612,11 @@ ta.demand.output.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.
 ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes.ver
 
 ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes.ver
-ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM_PeakAssignmentPaths.ver
-ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM_OffpeakAssignmentPaths.ver
-ta.pm.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM_PMAssignmentPaths.ver
-ta.ni.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM_NIAssignmentPaths.ver
+ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_PK_PATHS.ver
+ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_OP_PATHS.ver
+ta.pm.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_PM_PATHS.ver
+ta.nt.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_NT_PATHS.ver
+ta.daily.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_DAILY_PATHS.ver
 
 ta.zone.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/zoneFieldNames.csv
 ta.link.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/linkFieldNames.csv
@@ -622,6 +626,8 @@ ta.path.assignment.parameters = pathbasedAssignmentSettings.par
 ta.path.allperiod.assignment.parameters = pathbasedAssignmentSettings_FULL.par
 ta.luce.assignment.parameters = LUCEAssignmentSettings.par
 ta.luce.allperiod.assignment.parameters = LUCEAssignmentSettings_FULL.par
+ta.initial.auto.assignment.parameters = initAutoAssignment.par
+ta.initial.transit.assignment.parameters = initTransitAssignment.par
 # PATHBASED or LUCE
 ta.assignment.type = PATHBASED
 # PKOP (PEAK+OFFPEAK) or ALL (PEAK+OFFPEAK+PM+NIGHT)
