Set seed creation to false (SWIM-40)
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7441 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -12,7 +12,7 @@ scenario.inputs                                       = @ROOT.DIR@/@SCENARIO.NAM
 scenario.outputs                                      = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@
 scenario.root                                         = @ROOT.DIR@/@SCENARIO.NAME@
 visum.version                                         = 14
-new.zone.system										  = True
+new.zone.system										  = False
 
 
 java.executable      = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
