Allow for seed creation in t19 only
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7442 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/root/scenario/inputs/t19/globalTemplateUpdate.properties
+++ b/root/scenario/inputs/t19/globalTemplateUpdate.properties
@@ -3,3 +3,6 @@ aa.readHouseholdsByHHCategory=true
 aa.updateImportsAndExports=true
 aa.maxTotalClearance=0.00005
 aa.maxSpecificClearance=0.02
+
+#Only create seed skims in t19
+new.zone.system=False
