SWIM-50: Automates ActivityTotalsI creation.
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7488 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -40,6 +40,9 @@ daf.admin.port = 9067
 agforest.floorspace.file = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/AgForestFloorspace.csv
 world.market.fieldnames.file = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/worldMarketFields.csv
 
+#AA activity totals (need to be updated by Visum)
+aa.activity.totals = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ActivityTotalsI.csv
+
 #ALLZONESFILENAME
 all.zones.file = @ROOT.DIR@/@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/AllZones.csv
 #in these commands, |...| is used to indicate property references
