SWIM-55: Merged properties
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7492 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -26,7 +26,7 @@ model.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/tlumip.jar;@ROOT.DIR@/@S
 cpu.factor = 0.8
 use.localhost = True
 
-daf.memory = 15000m
+daf.memory = 35000m
 daf.start.node.sleep.time = 15000
 daf.start.cluster.sleep.time = 15000
 daf.done.file.check.sleep.time = 100
@@ -669,8 +669,9 @@ sl.visum.mode = true
 
 sl.visum.demand.segment.mapping = {'a_peak':2,'a_offpeak':1,'d_peak':6,'d_offpeak':5}
 
-sl.input.file.select.links = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/selectLinks_small.csv
-sl.ee.scaling.factor = 0.95
+sl.input.file.select.links = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/selectLinks.csv
+#sl.ee.scaling.factor = 0.95
+sl.ee.scaling.factor = 1.00
 
 sl.auto.classes = a_peak,a_peak,a_peak,a_peak
 sl.truck.classes = a_peak,a_peak,a_peak,a_peak
