--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -59,6 +59,8 @@ viz.max.concurrent.ts = 2
 viz.max.concurrent.total = 8
 
 model.run.program = @ROOT.DIR@/@SCENARIO.NAME@/run_model.bat
+model.setup.program = @ROOT.DIR@/@SCENARIO.NAME@/setup_run.bat
+model.build.program = @ROOT.DIR@/@SCENARIO.NAME@/build_run.bat
 model.run.python.program = @ROOT.DIR@/@SCENARIO.NAME@/run_model_python.bat
 model.run.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/model_runner/run_model.py
 model.run.bat.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/model_runner/model_run_batch.bat
@@ -213,7 +215,7 @@ ald.CurrentActivity = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RU
 
 ## AA data from prior AA run
 ald.PreviousActivity = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.PRIOR.RUN@/ActivityLocations.csv
-
+ald.copyToPreviousYear = false
 ## are we using AA or not
 ald.UsingAA = true
 
