--- a/root/scenario/inputs/t19/globalTemplateUpdate.properties
+++ b/root/scenario/inputs/t19/globalTemplateUpdate.properties
@@ -6,3 +6,6 @@ aa.maxSpecificClearance=0.02
 
 #Only create seed skims in t19
 new.zone.system=False
+
+#copy over the new t19 activity locations to t18 (can only do this after AA was run in t19, so at SI in t20)
+ald.copyToPreviousYear = true
