SWIM-67: Increased the ta.volume.factor.percentile property to 0.9 (from 0.5) to increase capacities (mainly off-peak).
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7527 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -638,7 +638,8 @@ ta.assignment.type = PATHBASED
 # PKOP (PEAK+OFFPEAK) or ALL (PEAK+OFFPEAK+PM+NIGHT)
 ta.assignment.periods = ALL
 
-ta.volume.factor.percentile = 0.5
+#must be greater than 0 and less than 1 (higher value = higher period capacity)
+ta.volume.factor.percentile = 0.9
 
 tr.transit.assignment.intracity.rail.parameters = intracityrailAssignmentSettings.par
 tr.transit.assignment.intercity.rail.parameters = intercityrailAssignmentSettings.par
