SWIM-71 Cleaning up the properties file
git-svn-id: http://216.243.97.229:9090/svn/projects/trunk/tlumip@7530 ee1c2863-5742-f242-9f82-d2f51c100d09

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -74,7 +74,6 @@ model.run.history.file = @ROOT.DIR@/@SCENARIO.NAME@/run_history.zip
 model.save.run.history.program = @ROOT.DIR@/@SCENARIO.NAME@/model/code/model_runner/save_run_history.bat
 
 alpha2beta.file                                       = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/alpha2beta.csv
-alpha2beta.formats                                    = NUMBER, NUMBER, STRING, STRING, NUMBER, NUMBER, NUMBER, NUMBER, NUMBER, NUMBER, NUMBER, STRING, STRING, STRING, NUMBER, STRING, NUMBER, NUMBER
 alpha.name                                            = Azone
 beta.name                                             = Bzone
 pumaField.name                                        = PUMA2000
@@ -171,7 +170,7 @@ ned.model.year=@CURRENT.INTERVAL@
 ned.allow.feedback=false
 
 ################################## ALD Properties ##################################
-nameOfRCode = ALD.R
+ald.RCode = ALD.R
 
 ## Path to ALD code
 ald.codePath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/
@@ -240,7 +239,6 @@ spg1.write.frequency.tables = false
 # file location for workers per household marginals - base year until 2000
 spg1.workers.per.household.marginals = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/workersPerHouseholdMarginalxYEAR.csv
 
-###temp
 # file location for jobs per worker factors - base year until 2000 - values set to 1 with NED update
 spg1.workers.per.job.factors = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/JobsToWorkersFactor.csv
 
@@ -250,8 +248,8 @@ spg1.hh.disk.object = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.IN
 
 
 # file locations for PI output files used for SPG2 input - current year
-pi.hhs.by.category.by.zone = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@/ActivityLocations2.csv
-pi.labor.dollars.by.zone = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@/laborDollarProduction.csv
+spg.hhs.by.category.by.zone = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@/ActivityLocations2.csv
+spg.labor.dollars.by.zone = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@/laborDollarProduction.csv
 
 
 # file locations for SPG2 output files - current year
@@ -312,13 +310,13 @@ acs.person.variables = SEX AGEP SCH ESR INDP OCCP
 
 
 ################################## AA Properties ##################################
-using.aa = true
 aa.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/aa.properties
 
 aa.command.java = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
 aa.command.max.heap.size = 3000m
 aa.command.log4j.config.file = info_log4j_aa.xml
-aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.7_r3650.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r3711.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
+aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.9_r4259.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r4258.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
+#aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/*;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 aa.command.class = com.hbaspecto.oregon.pecas.aa.OregonAAControl
 
 # Path for input files
@@ -352,11 +350,9 @@ aa.oregonOccupations=A1-Mgmt Bus,B1-Prof Specialty,B2-Education,B3-Health,B4-Tec
 aa.oregonHHtypes=HH0to8k1to2,HH0to8k3plus,HH8to15k1to2,HH8to15k3plus,HH15to23k1to2,HH15to23k3plus,HH23to32k1to2,HH23to32k3plus,HH32to46k1to2,HH32to46k3plus,HH46to61k1to2,HH46to61k3plus,HH61to76k1to2,HH61to76k3plus,HH76to106k1to2,HH76to106k3plus,HH106kUp1to2,HH106kUp3plus
 
 aa.09.productivity.rate = 0.120753428
-local.market.world.zone=6006
-port.of.portland.zone=5012
 
 # Input-output flags
-aa.calculateAveragePrices=true
+#aa.calculateAveragePrices=true
 aa.useLogitProduction =true
 aa.useLogitTechnologyChoice=true
 aa.useSQLInputs = false
@@ -615,13 +611,7 @@ tr.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTER
 
 ta.demand.output.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@
 ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes.ver
-
 ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes.ver
-ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_PK_PATHS.ver
-ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_OP_PATHS.ver
-ta.pm.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_PM_PATHS.ver
-ta.nt.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_NT_PATHS.ver
-ta.daily.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetworkAttributes_DAILY_PATHS.ver
 
 ta.zone.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/zoneFieldNames.csv
 ta.link.field.names = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/linkFieldNames.csv
@@ -676,8 +666,9 @@ sl.input.file.select.links = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0/sel
 #sl.ee.scaling.factor = 0.95
 sl.ee.scaling.factor = 1.00
 
+#TODO: Need to identify the proper values for the properties below
 sl.auto.classes = a_peak,a_peak,a_peak,a_peak
-sl.truck.classes = a_peak,a_peak,a_peak,a_peak
+sl.truck.classes = d_peak,d_peak,d_peak,d_peak
 
 sl.output.file.select.link.results = selectLinkResults.csv
 sl.output.file.select.link.weaving = sl_weaving.csv
@@ -688,7 +679,6 @@ sl.output.bundle.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.
 sl.numzones = 2960
 
 ################################## VIZ Database Properties ##################################
-odot.ftp.dir = z:\ftp_odot
 viz.activity.constraints = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/ActivityConstraintsI.csv
 viz.exchange.results.targets = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/ExchangeResultsTargetsI.csv
 
