--- a/root/swim_small/inputs/globalTemplate.properties
+++ b/root/swim_small/inputs/globalTemplate.properties
@@ -313,9 +313,10 @@ aa.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTER
 aa.command.java = @ROOT.DIR@/model/lib/java7/jre/bin/java.exe
 aa.command.max.heap.size = 3000m
 aa.command.log4j.config.file = info_log4j_aa.xml
-aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.9_r4259.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r4258.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
+aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.9_r4259.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r4441.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 #aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/*;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 aa.command.class = com.hbaspecto.oregon.pecas.aa.OregonAAControl
+aa.zoneConstantDecayFactor = 0.2
 
 # Path for input files
 aa.reference.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
