Better ignores again
Former-commit-id: 682b1e14101f0b273b339d7e079c331d0f66a18f

--- a/root/.gitignore
+++ b/root/.gitignore
@@ -1,4 +1,5 @@
 *
+# Need this sort of pattern to unignore subdirectories see http://stackoverflow.com/questions/1248570/git-ignore-everything-except-subdirectory
 !/model/
 !model/*
 !/scenario/
