--- a/root/scenario/outputs/t19/aa.properties
+++ b/root/scenario/outputs/t19/aa.properties
@@ -3,10 +3,10 @@ aa.property.file = outputs/t19/aa.properties
 
 aa.buildZoneFiles=false
 
-aa.command.java = C:/Program Files/Java/jre7/bin/java.exe
+aa.command.java = /usr/bin/java
 aa.command.max.heap.size = 3000m
 aa.command.log4j.config.file = info_log4j_aa.xml
-aa.command.classpath = model/code/aa/PecasV2.9_r4526a.jar;model/code/aa/censusdata_r2348.jar;model/code/aa/common-base_r2753.jar;model/code/aa/or124.jar;model/code/aa/mtj.jar;model/code/aa/log4j-1.2.9.jar;model/code/aa/postgresql-8.4-701.jdbc4.jar;model/code/aa/simple_orm_r1504.jar;model/code/aa/ref_r1573.jar;model/code/aa/oregonPP_r4526.jar;outputs/t19/;model/config
+aa.command.classpath = model/code/aa/PecasV2.9_r4527.jar:model/code/aa/censusdata_r2348.jar:model/code/aa/common-base_r2753.jar:model/code/aa/or124.jar:model/code/aa/mtj.jar:model/code/aa/log4j-1.2.9.jar:model/code/aa/postgresql-8.4-701.jdbc4.jar:model/code/aa/simple_orm_r1504.jar:model/code/aa/ref_r1573.jar:model/code/aa/oregonPP_r4526.jar:outputs/t19/:model/config
 aa.command.class = com.hbaspecto.oregon.pecas.aa.OregonAAControl
 
 # Path for input files
@@ -68,15 +68,15 @@ aa.makeTripMatrices=false
 
 # Run parameters
 aa.logFrequency = 25
-aa.maxIterations = 2000
+aa.maxIterations = 0
 aa.initialStepSize = .002
 aa.minimumStepSize = .025
 aa.maximumStepSize = 2.5
 aa.localPriceStepSizeAdjustment = 1
 aa.automaticTechnologySizeTerms=true
-aa.maxTotalClearance=0.00001
+aa.maxTotalClearance=0.0002
 #0.0005
-aa.maxSpecificClearance=0.02
+aa.maxSpecificClearance=0.03
 aa.ConFac=.01
 
 # Constrained mode iteratively runs AA updating zonal constants to match ActivityConstraintsI.csv HH+empxbzone
